[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playtomic-scheduler"
version = "0.1.0"
authors = [{ name = "Yuyi Kimura" }]
description = "Auto-scheduling padel courts through Playtomic."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8,<9",
    "pydantic>=2,<3",
    "schedule>=1,<2",
    "requests>=2,<3",
    "tzlocal>=5,<6",
    "waitress>=3,<4",
    "pydantic-settings>=2,<3",
    "pytz>=2024",
]

[project.scripts]
playsc = "playtomic_scheduler.__main__:cli"
